...

export type LanguageStackParamList = {
  'Language Home': undefined;
  Listen: {
    lesson: number;
  };
  'All Lessons': undefined;
  'Data Management': undefined;
};
export type LanguageStackScreenProps = CompositeNavigationProp<
  DrawerNavigationProp<AppParamList, 'Language'>,
  StackNavigationProp<LanguageStackParamList>
>;
...
