...
    version: 0,
    lessons: [
      {
        url: 'https://downloads.languagetransfer.org/spanish/spanish1.mp3',
        id: 'spanish1',
        duration: 334.132,
        title: 'Lesson 1',

        // in the future:
        pauses: [
          {
            start: 4.983162,
            end: 6.588704,
...
    bundledFirstLesson: inglesFirstLesson,
    bundledFirstLessonId: 'ingles/ingles1',
  },
  music: {
    image: musicCover,
    imageWithText: musicCoverWithText,
    shortTitle: 'Music Theory',
    fullTitle: 'Introduction to Music Theory',
    courseType: 'intro',
    metaUrl: 'https://downloads.languagetransfer.org/music/music-meta.json',
    fallbackLessonCount: '10+',
    uiColors: {
      background: '#f8eebc',
...
