appId: org.languagetransfer
---
- launchApp:
    clearState: true
- assertVisible: "Language courses"
- scrollUntilVisible:
    element:
      text: "German"
    direction: DOWN
- tapOn: "German"
- assertVisible: "Lesson 1"
- takeScreenshot: course-german
