appId: org.languagetransfer
---
- launchApp:
    clearState: true
- assertVisible: "Language courses"
- scrollUntilVisible:
    element:
      text: "Greek"
    direction: DOWN
- tapOn: "Greek"
- assertVisible: "Lesson 1"
- takeScreenshot: course-greek
