appId: org.languagetransfer
---
- launchApp:
    clearState: true
- assertVisible: "Language courses"
- scrollUntilVisible:
    element:
      text: "Italian"
    direction: DOWN
- tapOn: "Italian"
- assertVisible: "Lesson 1"
- takeScreenshot: course-italian
