appId: org.languagetransfer
---
- launchApp:
    clearState: true
- assertVisible: "Language courses"
- scrollUntilVisible:
    element:
      text: "Spanish"
    direction: DOWN
- tapOn: "Spanish"
- assertVisible: "Lesson 1"
- takeScreenshot: course-spanish
