appId: org.languagetransfer
---
- launchApp:
    clearState: true
- assertVisible: "Language courses"
- scrollUntilVisible:
    element:
      text: "Music Theory"
    direction: DOWN
- tapOn: "Music Theory"
- assertVisible: "Lesson 1"
- takeScreenshot: course-music
